--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <div class="container">
         <h1 class="turn"></h1>
         <div class="board"></div>
+        <div class="inputs">
+            <span>
+                <label for="p1">P1 Name</label>
+                <input type="text" id="p1" name="p1">
+            </span>
+            <span>
+                <label for="p2">P2 Name</label>
+                <input type="text" id="p2" name="p2">
+                <button type="submit" id="subBtn">Submit</button>
+            </span>
+        </div>
     </div>
     
 </body>
