Add reset button

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <input type="text" id="p2" name="p2">
                 <button type="submit" id="subBtn">Submit</button>
             </span>
+            <span><button id="reset">Reset</button></span>
         </div>
     </div>
     
